added json solution saving/loading. corrected tws loading extension